--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,5 +4,8 @@
     "**/bower_components": true,
     "**/.sfdx": true
   },
-  "salesforcedx-vscode-apex.java.home": "C:\\\\Program Files\\\\Java\\\\jdk-17"
+  "salesforcedx-vscode-apex.java.home": "C:\\Program Files\\Java\\jdk-17",
+  "json.schemas": [
+    
+  ]
 }
