--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
-    <types>
+  <!---  <types>
         <members>*</members>
         <name>ApexClass</name>
-    </types>
+    </types> 
     <types>
         <members>*</members>
         <name>ApexComponent</name>
@@ -31,6 +31,10 @@
     <types>
         <members>*</members>
         <name>StaticResource</name>
+    </types> -->
+    <types>
+      <members>*</members>
+        <name>LightningMessageChannel</name>
     </types>
     <version>59.0</version>
 </Package>
